fixes bug 97528 "1200 urls created on startup about:blank" r=dp, sr=dougt