netwerk/protocol/res/src/nsResProtocolHandler.cpp
@@ -39,8 +39,6 @@
 #include "nsIURL.h"
 #include "nsIIOService.h"
 #include "nsIServiceManager.h"
-#include "nsResChannel.h"
-#include "nsIFileChannel.h"
 #include "prenv.h"
 #include "prmem.h"
 #include "prprf.h"
@@ -48,16 +46,30 @@
 #include "nsIFile.h"
 #include "nsDirectoryServiceDefs.h"
 #include "nsNetCID.h"
-#include "nsNetUtil.h"
+#include "nsResURL.h"
 
 static NS_DEFINE_CID(kStandardURLCID, NS_STANDARDURL_CID);
+static NS_DEFINE_CID(kIOServiceCID, NS_IOSERVICE_CID);
 
 ////////////////////////////////////////////////////////////////////////////////
+
+nsResProtocolHandler *nsResProtocolHandler::mGlobalInstance = nsnull;
 
 nsResProtocolHandler::nsResProtocolHandler()
     : mLock(nsnull), mSubstitutions(32)
 {
     NS_INIT_REFCNT();
+
+    NS_ASSERTION(!mGlobalInstance, "res handler already created!");
+    mGlobalInstance = this;
+}
+
+nsResProtocolHandler::~nsResProtocolHandler()
+{
+    if (mLock)
+        PR_DestroyLock(mLock);
+
+    mGlobalInstance = nsnull;
 }
 
 nsresult
@@ -68,14 +80,8 @@ nsResProtocolHandler::SetSpecialDir(const char* rootName, const char* sysDir)
     rv = NS_GetSpecialDirectory(sysDir, getter_AddRefs(file));
     if (NS_FAILED(rv)) return rv;
 
-    nsCOMPtr<nsIFileURL> fileURL(do_CreateInstance(kStandardURLCID, &rv));
-    if (NS_FAILED(rv)) return rv;
-
-    rv = fileURL->SetFile(file);
-    if (NS_FAILED(rv)) return rv;
-
     nsXPIDLCString spec;
-    rv = fileURL->GetSpec(getter_Copies(spec));
+    rv = file->GetURL(getter_Copies(spec));
     if (NS_FAILED(rv)) return rv;
 
     return AppendSubstitution(rootName, spec);
@@ -85,6 +91,9 @@ nsresult
 nsResProtocolHandler::Init()
 {
     nsresult rv;
+
+    mIOService = do_GetService(kIOServiceCID, &rv);
+    if (NS_FAILED(rv)) return rv;
 
     mLock = PR_NewLock();
     if (mLock == nsnull)
@@ -132,12 +141,6 @@ nsResProtocolHandler::Init()
     if (NS_FAILED(rv)) return rv;
 
     return rv;
-}
-
-nsResProtocolHandler::~nsResProtocolHandler()
-{
-    if (mLock)
-        PR_DestroyLock(mLock);
 }
 
 NS_IMPL_THREADSAFE_ISUPPORTS3(nsResProtocolHandler, nsIResProtocolHandler, nsIProtocolHandler, nsISupportsWeakReference)
@@ -192,23 +195,31 @@ nsResProtocolHandler::NewURI(const char *aSpec, nsIURI *aBaseURI,
 {
     nsresult rv;
 
-    nsCOMPtr<nsIURI> url(do_CreateInstance(kStandardURLCID, &rv));
+    nsCOMPtr<nsIURI> uri(do_CreateInstance(kStandardURLCID, &rv));
     if (NS_FAILED(rv)) return rv;
 
     if (aBaseURI) {
         nsXPIDLCString aResolvedURI;
         rv = aBaseURI->Resolve(aSpec, getter_Copies(aResolvedURI));
         if (NS_FAILED(rv)) return rv;
-        rv = url->SetSpec(aResolvedURI);
+        rv = uri->SetSpec(aResolvedURI);
     } else {
-        rv = url->SetSpec((char*)aSpec);
+        rv = uri->SetSpec((char*)aSpec);
     }
 
     if (NS_FAILED(rv))
         return rv;
 
-    *result = url;
-    NS_ADDREF(*result);
+    nsResURL *resURL;
+    NS_NEWXPCOM(resURL, nsResURL);
+    if (!resURL)
+        return NS_ERROR_OUT_OF_MEMORY;
+    NS_ADDREF(resURL);
+
+    rv = resURL->Init(uri);
+    if (NS_SUCCEEDED(rv))
+        rv = CallQueryInterface(resURL, result);
+    NS_RELEASE(resURL);
     return rv;
 }
 
@@ -216,19 +227,15 @@ NS_IMETHODIMP
 nsResProtocolHandler::NewChannel(nsIURI* uri, nsIChannel* *result)
 {
     nsresult rv;
-    
-    nsResChannel* channel;
-    rv = nsResChannel::Create(nsnull, NS_GET_IID(nsIResChannel), (void**)&channel);
+    nsXPIDLCString spec;
+
+    rv = ResolveURI(uri, getter_Copies(spec));
     if (NS_FAILED(rv)) return rv;
 
-    rv = channel->Init(this, uri);
-    if (NS_FAILED(rv)) {
-        NS_RELEASE(channel);
-        return rv;
-    }
+    rv = mIOService->NewChannel(spec, nsnull, result);
+    if (NS_FAILED(rv)) return rv;
 
-    *result = (nsIChannel*)(nsIResChannel*)channel;
-    return NS_OK;
+    return (*result)->SetOriginalURI(uri);
 }
 
 NS_IMETHODIMP 
@@ -246,10 +253,8 @@ nsResProtocolHandler::PrependSubstitution(const char *root, const char *urlStr)
     nsresult rv;
     nsAutoLock lock(mLock);
 
-    nsCOMPtr<nsIIOService> ioServ = do_GetIOService(&rv);
-    if (NS_FAILED(rv)) return rv;
     nsCOMPtr<nsIURI> url;
-    rv = ioServ->NewURI(urlStr, nsnull, getter_AddRefs(url));
+    rv = mIOService->NewURI(urlStr, nsnull, getter_AddRefs(url));
     if (NS_FAILED(rv)) return rv;
 
     nsCStringKey key(root);
@@ -283,10 +288,8 @@ nsResProtocolHandler::AppendSubstitution(const char *root, const char *urlStr)
     nsresult rv;
     nsAutoLock lock(mLock);
 
-    nsCOMPtr<nsIIOService> ioServ = do_GetIOService(&rv);
-    if (NS_FAILED(rv)) return rv;
     nsCOMPtr<nsIURI> url;
-    rv = ioServ->NewURI(urlStr, nsnull, getter_AddRefs(url));
+    rv = mIOService->NewURI(urlStr, nsnull, getter_AddRefs(url));
     if (NS_FAILED(rv)) return rv;
 
     nsCStringKey key(root);
@@ -339,10 +342,8 @@ nsResProtocolHandler::RemoveSubstitution(const char *root, const char *urlStr)
     nsresult rv;
     nsAutoLock lock(mLock);
 
-    nsCOMPtr<nsIIOService> ioServ = do_GetIOService(&rv);
-    if (NS_FAILED(rv)) return rv;
     nsCOMPtr<nsIURI> url;
-    rv = ioServ->NewURI(urlStr, nsnull, getter_AddRefs(url));
+    rv = mIOService->NewURI(urlStr, nsnull, getter_AddRefs(url));
     if (NS_FAILED(rv)) return rv;
 
     nsCStringKey key(root);
@@ -393,6 +394,31 @@ nsResProtocolHandler::HasSubstitutions(const char *root, PRBool *result)
     nsCStringKey key(root);
     *result = mSubstitutions.Exists(&key);
     return NS_OK;
+}
+
+NS_IMETHODIMP
+nsResProtocolHandler::ResolveURI(nsIURI *uri, char **result)
+{
+    nsresult rv;
+    nsXPIDLCString host, path;
+
+    rv = uri->GetHost(getter_Copies(host));
+    if (NS_FAILED(rv)) return rv;
+
+    rv = uri->GetPath(getter_Copies(path));
+    if (NS_FAILED(rv)) return rv;
+
+    nsCOMPtr<nsISupportsArray> substitutions;
+    rv = GetSubstitutions(host.get() ?
+                          host.get() : "", getter_AddRefs(substitutions));
+    if (NS_FAILED(rv)) return rv;
+
+    // always use the first substitution
+    nsCOMPtr<nsIURI> substURI;
+    rv = substitutions->GetElementAt(0, getter_AddRefs(substURI));
+    if (NS_FAILED(rv)) return rv;
+
+    return substURI->Resolve(path[0] == '/' ? path+1 : path, result);
 }
 
 ////////////////////////////////////////////////////////////////////////////////
