netwerk/protocol/res/src/nsResProtocolHandler.h
@@ -26,6 +26,7 @@
 #include "nsIResProtocolHandler.h"
 #include "nsHashtable.h"
 #include "nsISupportsArray.h"
+#include "nsIIOService.h"
 #include "nsWeakReference.h"
 
 class nsResProtocolHandler : public nsIResProtocolHandler, public nsSupportsWeakReference
@@ -45,9 +46,14 @@ public:
     nsresult Init();
     nsresult SetSpecialDir(const char* rootName, const char* specialDir);
 
-protected:
-    PRLock*             mLock;
-    nsSupportsHashtable mSubstitutions;
+    static nsResProtocolHandler *get() { return mGlobalInstance; }
+
+private:
+    static nsResProtocolHandler *mGlobalInstance;
+
+    PRLock*                mLock;
+    nsSupportsHashtable    mSubstitutions;
+    nsCOMPtr<nsIIOService> mIOService;
 };
 
 #endif /* nsResProtocolHandler_h___ */
